feat:优化产品订阅与文件存储功能